2015-02-26  Charlie Zender  <zender@uci.edu>

	* Add .gitignore's to clean up git status output

2015-02-25  Charlie Zender  <zender@uci.edu>

	* Create csz branch for local work on 4.4.9

2015-02-24  Charlie Zender  <zender@uci.edu>

	* Replace SF source addresses with GitHub source addresses

	* Document Git transition procedure

	* Remove CVS keyword expansions by copying un-expanded originals over from CVS tree

	* Create README.md for Github

	* Clean-up ChangeLog

	* Worked on CVS->SVN-->Git migration all week. Preserving tags is hard.

	* Final procedure was something like:
	# Generate dumpfile
	cvs2svn -v --encoding=ascii --encoding=latin_1 --dumpfile=/home/zender/nco_20150216_dumpfile -s /home/zender/svn > ~/cvs2svn.txt

	rsync -aiv nco_20150216_dumpfile zender,nco@web.sf.net:
	ssh -t zender,nco@shell.sourceforge.net create
	mv /home/project-web/nco/nco_20150216_dumpfile .

	# Initialize SF SVN repository
	svnadmin create /home/project-web/nco/svn
	# Do hard work
	svnadmin load /home/project-web/nco/svn < /home/project-web/nco/nco_20150216_dumpfile
	# Check-out (failed)
	svn checkout --username=zender svn+ssh://zender@svn.code.sf.net/p/nco/svn/ ~/nco-svn

	# Initialize local SVN repository
	cd;mkdir svn;svnadmin create svn
	# Do hard work
	svnadmin load svn < nco_20150216_dumpfile
	# Check-out
	svn checkout file:///home/zender/svn/trunk/nco ~/nco_svn

	# Create local Git repository
	/bin/rm -r -f ~/nco
	mkdir -p ~/nco
	cd ~/nco

	# Convert SVN to Git with git svn (actual command used, ~18.6 MiB compressed to clone)
	# http://git-scm.com/book/en/v2/Git-and-Other-Systems-Migrating-to-Git
	git svn clone file:///home/zender/svn/trunk/nco --authors-file=/home/zender/nco_authors.txt --ignore-paths='^CVSROOT' --no-metadata

	# Move tags to be proper Git tags, move other references to be local branches
	/bin/cp -Rf .git/refs/remotes/origin/tags/* .git/refs/tags/
	/bin/rm -Rf .git/refs/remotes/origin/tags
	/bin/cp -Rf .git/refs/remotes/* .git/refs/heads/