@@ -1,3 +1,11 @@
+2015-03-07  Charlie Zender  <zender@uci.edu>
+
+	* NCO 4.4.9 release procedure:
+ 	Changes since nco-4.4.8: git, -x warn,
+	cd ~/nco;git commit -a -m "Preparing nco-4.4.8 release"
+
+	* Warn when coordinate variables intended to be excluded by -x and -C was not invoked
+
 2015-02-26  Charlie Zender  <zender@uci.edu>
 
 	* Add .gitignore's to clean up git status output
